--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ghost Run – No Names. No Limits.</title>
   <style>
     body {
@@ -12,53 +12,91 @@
       font-family: 'Inter', sans-serif;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
+      padding: 2rem;
       height: 100vh;
+    }
+
+    h1, h2 {
+      text-align: center;
+      color: #FF3B3B;
+      margin-bottom: 1rem;
+    }
+
+    input[type="password"] {
+      padding: 0.75rem;
+      font-size: 1rem;
+      margin-bottom: 1rem;
+      width: 300px;
+      background: #1A1A1A;
+      border: 1px solid #444;
+      color: #F2F2F2;
       text-align: center;
     }
-    h1 {
-      font-size: 3rem;
-      letter-spacing: 0.1rem;
-      margin-bottom: 0.5rem;
-    }
-    h2 {
-      font-weight: 400;
-      color: #AAAAAA;
-      margin-bottom: 2rem;
-    }
+
     .cta {
-      background-color: transparent;
-      border: 2px solid #FF3B3B;
-      color: #FF3B3B;
-      padding: 1rem 2rem;
-      font-size: 1rem;
-      letter-spacing: 0.05rem;
-      cursor: pointer;
-      transition: background 0.3s ease;
-      text-decoration: none;
-    }
-    .cta:hover {
       background-color: #FF3B3B;
-      color: #0D0D0D;
+      color: white;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      cursor: pointer;
     }
+
     .footer {
-      position: absolute;
-      bottom: 1rem;
-      font-size: 0.8rem;
-      color: #444;
+      margin-top: 4rem;
+      font-size: 0.75rem;
+      color: #666;
+    }
+
+    #mainContent {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+    }
+
+    a.cta {
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 1rem;
     }
   </style>
 </head>
 <body>
 
-  <h1>Ghost Run</h1>
-  <h2>No Names. No Limits.</h2>
-  <a href="#notify" class="cta">Request Access</a>
-
-  <div class="footer">
-    &copy; 2025 GSTRun. All rights reserved.
+  <div id="loginScreen">
+    <h1>GSTRun Access</h1>
+    <h2>Enter Passphrase to Continue</h2>
+    <input type="password" id="accessCode" placeholder="Enter code..." />
+    <button onclick="checkPassword()" class="cta">Enter</button>
+    <p id="errorMsg" style="color: #FF3B3B; display: none;">Incorrect code. Try again.</p>
   </div>
+
+  <div id="mainContent">
+    <h1>Ghost Run</h1>
+    <h2>No Names. No Limits.</h2>
+    
+    <div class="footer">
+      &copy; 2025 GSTRun. All rights reserved.
+    </div>
+  </div>
+
+  <script>
+    function checkPassword() {
+      const correctCode = "gstrun2025"; // <-- Change this code to whatever you'd like
+      const enteredCode = document.getElementById('accessCode').value;
+      if (enteredCode === correctCode) {
+        document.getElementById('loginScreen').style.display = 'none';
+        document.getElementById('mainContent').style.display = 'flex';
+      } else {
+        document.getElementById('errorMsg').style.display = 'block';
+      }
+    }
+  </script>
+  <a href="#notify" class="cta">Request Access</a>
 
 </body>
 </html>
