--- a/leaderboard.html
+++ b/leaderboard.html
@@ -68,7 +68,7 @@
 </head>
 <body>
 
-  <img src="https://via.placeholder.com/180x60?text=GSTRun+Logo" alt="GSTRun Logo" class="logo" />
+  <img src="img.logo" alt="Ghost Run Logo" class="logo" />
   <h1>Ghost Run Leaderboard</h1>
 
   <input type="text" id="searchInput" onkeyup="filterTable()" placeholder="Search UID or Sector..." />
