--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
 
   <div id="loginScreen">
-    <h1>GSTRun Access</h1>
+    <h1>Ghost Run Access</h1>
     <h2>Enter Passphrase to Continue</h2>
     <input type="password" id="accessCode" placeholder="Enter code..." />
     <button onclick="checkPassword()" class="cta">Enter</button>
