--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
       if (validHashes.includes(enteredHash)) {
         sessionStorage.setItem("gstrunAccess", "1");
-        window.location.href = "leaderboard_session_protected.html"; // or your final filename
+        window.location.href = "leaderboard.html"; // or your final filename
       } else {
         document.getElementById('errorMsg').style.display = 'block';
       }
