--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       padding: 0.75rem 1.5rem;
       font-size: 1rem;
       cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 1rem;
     }
 
     .footer {
@@ -83,8 +86,8 @@
       ];
 
       if (validHashes.includes(enteredHash)) {
-        sessionStorage.setItem("gstrunAccess", "1");
-        window.location.href = "leaderboard.html"; // or your final filename
+        sessionStorage.setItem("gstrunAccess", "1");  // ✅ Session flag for access
+        window.location.href = "leaderboard.html";   // 🔁 Redirect to protected page
       } else {
         document.getElementById('errorMsg').style.display = 'block';
       }
